# aqua

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 9ca96b88aa41_initial_schema.py  c4b80ca89872_userid_to_uuid.py
app/: config.py  main.py  models.py
app/api/: home.py  players.py  quiz.py  users.py
app/database/: db.py  seed.py
templates/: base.html  home.html  login.html  players_scores.html  players_setup.html  quiz.html  quiz_generate.html  register.html
