[project]
name = "aqua"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.14.1",
    "pymysql>=1.2.0",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.50",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.48.0",
]
